	  frequency (2014-3-29).
	* configs/sama5d3x-ek:  Change all configuration names to board-
	  specific names so that this are no name collisions with other
	  boards that have similar configuration variables (2013-3-30).
	* configs/nuttx/compiler.h:  Add macro UNUSED() that can be used
	  to eliminate warnings about variables that are set to values
	  that are not used (2014-3-30).
	* arch/arm/src/sama5/sam_hsmci_clkciv.c:  Remove HSCMI-related
	  functions that did not belong in sam_pmc.c and give them their
	  own file (2014-3-30).
	* arch/arm/src/sama5/sam_boot.c:  Fix some backward conditional
	  compilation (2014-3-30).
	* libc/stdio/lib_sccanf.c:  Fix a counting error in the return
	  value from sscanf().  Noted by kfrolov.  Also, sscanf() should
	  return EOF if no values were converted (2014-3-30).
	* include/time.h and sched/clock_settime(): Add support for
	  CLOCK_REALTIME.  From Macs N (2014-3-31).
	* libc/stdio/lib_ferror.c, lib_fread.c, lib_libfflush.c,
	  lib_libfread.c, and lib_libfwrite.c:  Finish incomplete support
	  for ferror().  From Macs N (2014-3-14).
	* libc/stdio/lib_ftell.c:  Fix a logic error in ftell().  It was
	  simply using the file offset and did not take into account data
	  buffered in memory.  From Macs N (2013-3-31).
	* Add CONFIG_CLOCK_MONOTONIC that case used to disable CLOCK_MONOTONIC
	  for a smaller footprint (2013-3-31).
	* sched/Kconfig:  Menu has gotten too long.  And another layer of
	  menuing in order to simplify this layer (2014-3-31).
	* arch/arm/src/sama5_boot.c:  Fix double mapping of SDRAM when executing
	  out of SDRAM.  In this case, the SDRAM was already mapping in
	  arm_head.S (2014-3-31).
	* arch/arm/src/sama5/chip/sam_dbgu.h:  Add SAMA5D3 DBGU definition
	  header file (2014-3031).
	* arch/arm/src/sama5/sam_dbgu.c and .h:  Add support for the SAMA5D3
	  DBGU (2014-4-1).
	* configs/sama5d3-xplained/nsh:  Configurations now use the DBGU for
	  the serial console (instead of USART1) (2014-4-1).